third_party/move/move-compiler-v2/tests/lambda/inline-parity/nested_lambda_module.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/nested_lambda_module.move:13:22
   │
13 │         Test1::apply(|x, y| x + y, 1, Test1::apply(|x, y| x * y, 2, 1))
   │                      ^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
   ┌─ tests/lambda/inline-parity/nested_lambda_module.move:13:52
   │
13 │         Test1::apply(|x, y| x + y, 1, Test1::apply(|x, y| x * y, 2, 1))
   │                                                    ^^^^^^^^^^^^
